# stock-vision

./: .gitignore  Cargo.toml  README.md
crates/analysis-core/: Cargo.toml
crates/analysis-core/src/: lib.rs
crates/chart-engine/: Cargo.toml
crates/chart-engine/src/: candlestick.rs  lib.rs
crates/data-model/: Cargo.toml
crates/data-model/src/: lib.rs
crates/data-source/: Cargo.toml
crates/data-source/src/: eastmoney.rs  finnhub.rs  lib.rs  mock.rs  tencent.rs  yahoo.rs
crates/indicator-core/: Cargo.toml
crates/indicator-core/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
src/: app.rs  main.rs
src/services/: analysis_service.rs  data_service.rs  indicator_service.rs  mod.rs
src/state/: mod.rs
src/ui/: mod.rs  style.rs
src/ui/charts/: candlestick_chart.rs  intraday_chart.rs  mod.rs
src/ui/panels/: chart.rs  fundamental.rs  home.rs  mod.rs  settings.rs  technical.rs  watchlist.rs
src/ui/widgets/: mod.rs
tests/: api_test.rs
