[package]
name = "stock-vision-storage"
version = "0.1.0"
edition = "2021"
description = "Local storage layer using SQLite"

[dependencies]
stock-vision-data-model = { path = "../data-model" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
